tweaking responsive styles to stop nav link wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ nav ul li {
   border-radius: 16px;
   width: 100%;
   font-family: var(--font-headings);
-  font-size: calc(12px + 1vw);
+  font-size: calc(10px + 0.5vw);
   padding: 0 1vw;
   margin: 0 1vw;
   text-align: center;
